...
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/entrantButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Entrant"
        android:padding="15dp"
        android:textSize="24sp"
        android:visibility="gone"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

    <Button
        android:id="@+id/organizerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Organizer"
        android:padding="15dp"
        android:textSize="24sp"
        android:visibility="gone"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Administrator"
        android:padding="15dp"
        android:textSize="24sp"
        android:visibility="gone"
...
