...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Administrator"
                    android:textStyle="bold"
                    android:textSize="25sp"/>
                <Button
                    android:id="@+id/viewEventsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View Events"/>
                <Button
                    android:id="@+id/viewProfilesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View Profiles"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
...
