...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/adminDeleteEventButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Delete Event"/>
        <Button
            android:id="@+id/adminRemoveQRButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Remove QR"/>
        <Button
            android:id="@+id/adminRemoveEventPoster"
...
