<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>
    <ListView
        android:id="@+id/adminProfileUsersListview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
